--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "outDir": "./dist",
     "esModuleInterop": true
+    "allowJs": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
