テスト環境とスクリプトの追加
- Jestの設定ファイル `jest.config.cjs` を追加し、テスト環境を構築
- `README.md` にテスト実行方法を追加
- `package.json` にテスト実行用のスクリプトと必要な依存関係を追加
- `src/index.ts` の初期化関数 `init` を追加し、シーンの初期化コードを整理
- 3Dシーンの初期化とレンダリングに関するテストを `tests/index.test.ts` に追加
- TypeScriptコンフィグ `tsconfig.json` にテストディレクトリを含めるよう変更

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "strict": true,
     "moduleResolution": "node",
     "outDir": "./dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["jest", "node"],
     "allowJs": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules"]
 }
