--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "scripts": {
     "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "test": "jest"
   },
   "dependencies": {
     "@types/three": "^0.164.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "css-loader": "^7.1.1",
     "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "ts-jest": "^29.1.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
